feat: record host and process sync timestamps --issue=#3063
