# docs/api/swagger/backend/api/v3/process.swagger.json
@@ -679,6 +679,10 @@
         },
         "status": {
           "type": "string"
+        },
+        "last_sync_at": {
+          "type": "integer",
+          "format": "int64"
         }
       },
       "description": "ProcessInfo describes the process information."
