# pkg/proto/backend/api/v3/process.go
@@ -20,6 +20,7 @@ package v3
 
 import (
 	"fmt"
+	"time"
 
 	"github.com/TencentBlueKing/bk-nodemgr/pkg/format/platform"
 	"github.com/TencentBlueKing/bk-nodemgr/pkg/runtime/conv"
@@ -151,6 +152,7 @@ func (x *ProcessListResp) ConvertProcessFromTypes(total int64, process []*types.
 		*item.ProcessInfo.AgentId = proc.Info.AgentID
 		*item.ProcessInfo.AutoStart = proc.Info.AutoStart
 		*item.ProcessInfo.Status = proc.Info.Status.String()
+		*item.ProcessInfo.LastSyncAt = timeToUnixMilli(proc.Info.LastSyncAt)
 		*item.ProcessIdentity.Name = proc.Identity.Name
 		*item.ProcessIdentity.SetupPath = proc.Identity.SetupPath
 		*item.ProcessIdentity.PidPath = proc.Identity.PidPath
@@ -194,11 +196,12 @@ func newEmptyProcess() *ProcessListResp_Process {
 		},
 		Generation: new(int64),
 		ProcessInfo: &ProcessInfo{
-			Pid:       new(int32),
-			Version:   new(string),
-			AgentId:   new(string),
-			AutoStart: new(bool),
-			Status:    new(string),
+			Pid:        new(int32),
+			Version:    new(string),
+			AgentId:    new(string),
+			AutoStart:  new(bool),
+			Status:     new(string),
+			LastSyncAt: new(int64),
 		},
 		ProcessIdentity: &ProcessIdentity{
 			Name:       new(string),
@@ -282,6 +285,9 @@ func (x *ProcessListResp) ConvertProcessToTypes() ([]*types.Process, int64) {
 				StopCheckSecs:  proc.GetProcessMonitorPolicy().GetStopCheckSeconds(),
 				OpTimeoutSecs:  proc.GetProcessMonitorPolicy().GetOperateTimeoutSeconds(),
 			},
+		}
+		if proc.GetProcessInfo().LastSyncAt != nil && proc.GetProcessInfo().GetLastSyncAt() != 0 {
+			item.Info.LastSyncAt = time.UnixMilli(proc.GetProcessInfo().GetLastSyncAt())
 		}
 
 		process[idx] = item
